add csrf tag to admin

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,6 +17,9 @@
     <link href="/admin/admin.css" rel="stylesheet">
 
     <%= javascript_include_tag "application" %>
+
+  <%= csrf_meta_tag %>
+    
   </head>
 
   <body class="preview" data-spy="scroll" data-target=".subnav" data-offset="80">
