--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,6 +10,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <%= csrf_meta_tag %>
 
     <link href="/admin/admin-bootstrap.min.css" rel="stylesheet">
     <link href="/admin/admin-bootstrap-responsive.min.css" rel="stylesheet">
